2008-03-30  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/type-test/codegen: 
	generation of code for full_copy of objects 
	which are by-reference objects. 
	
2008-03-25  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/lapack/lapack.c: add the symmmetric and positive 
	definite symmetric cases to bdiv. 
	* src/lapack/lapack-IN.c: add interface for solve 
	which uses the different bdiv functions. man added 
		
2008-03-25  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/lapack/lapack.c (nsp_mat_bdiv_banded): 
	add the banded case for bdiv. This comes with
	some utilities to detect lower and upper matrix
	bandwidths (for Mat and SpColMat too)
	* src/objects/SpColMatrix.c: a few utilities
	for sparse, 1/add triangular solving for sparse
	(interfaced with solve_tri but this is just to
	test), 2/ add scale rows and cols methods.
	* man/linalg/norm.tex 
	add man page for norm
	
2008-03-17  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/SpColMatrix.c (nsp_spcolmatrix_is_symetric):
	add issymetric test for sparse matrix.

2008-03-10  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libinteg/integ-IN.c (make_triangles): 
	int2d could now integrate directly on a rectangle
	(when X and Y arg of int2d are vectors of length 2
	a triangulation is computed), see int2d help page.
	* src/objet/SpColMatrix.c: rewrite sparse function
	(add 2 elements having the same (i,j) indices), write
	codes 1/ to compute frobenius norm (using lapack 's 
	method of scaling) and 2/ to detect if a sparse
	is lower or upper triangular.

2008-03-06  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/object/*.c: 
	Storage of implicit vector in matrices added. 
	A new method named as_index was also added to NspObject. 
	as_index is implemented in NspMatrix, NspBMatrix ans NspIVect. 
	as_index can use the implicit vector storage of 
	matrices. matint.c and sparse matrices were changed 
	to use as_index. 
			